--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,6 @@ dependencies {
     compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.2.v20170220'
     compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.2.v20170220'
 
-
-
     compile 'org.glassfish.jersey.core:jersey-client:2.25.1'
     compile 'org.glassfish.jersey.core:jersey-common:2.25.1'
     compile 'org.glassfish.jersey.core:jersey-server:2.25.1'
@@ -27,17 +25,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-json-jackson
     compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.25.1'
 
-
-
-
-
-    //compile group: 'org.apache.jena', name: 'apache-jena-libs', version: '3.2.0'
-    //compile group: 'org.apache.jena', name: 'apache-jena-fuseki', version: '2.5.0'
-    //compile group: 'org.semweb4j', name: 'dist', version: '5.0.1'
-
-    compile group: 'net.sourceforge.owlapi', name: 'owlapi-distribution', version: '3.5.6'
-
-    compile group: 'com.sun.codemodel', name: 'codemodel', version: '2.6'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
 
     // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.24'
@@ -45,12 +34,19 @@ dependencies {
     // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.1'
 
-    // https://mvnrepository.com/artifact/org.okkam.owl/jaob-core
-    compile group: 'org.okkam.owl', name: 'jaob', version: '1.0'
+    //    compile group: 'net.sourceforge.owlapi', name: 'owlapi-distribution', version: '3.5.6'
+//
+//    compile group: 'com.sun.codemodel', name: 'codemodel', version: '2.6'
+//    // https://mvnrepository.com/artifact/org.okkam.owl/jaob-core
+//    compile group: 'org.okkam.owl', name: 'jaob', version: '1.0'
+//
+//    compile group: 'org.okkam.owl', name: 'jaob-core', version: '1.0'
+//
+//    // https://mvnrepository.com/artifact/org.okkam.owl/jaob-maven-plugin
+//    compile group: 'org.okkam.owl', name: 'jaob-maven-plugin', version: '1.0'
 
-    compile group: 'org.okkam.owl', name: 'jaob-core', version: '1.0'
-
-    // https://mvnrepository.com/artifact/org.okkam.owl/jaob-maven-plugin
-    compile group: 'org.okkam.owl', name: 'jaob-maven-plugin', version: '1.0'
+    //compile group: 'org.apache.jena', name: 'apache-jena-libs', version: '3.2.0'
+    //compile group: 'org.apache.jena', name: 'apache-jena-fuseki', version: '2.5.0'
+    //compile group: 'org.semweb4j', name: 'dist', version: '5.0.1'
 
 }
