JAOB bugfix, start reasoner and query work

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,12 @@ apply plugin: 'war'
 
 repositories {
     mavenCentral()
+    mavenLocal()
+}
+
+configurations.all {
+    // Check for updates every build
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
 dependencies {
@@ -14,7 +20,8 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server
     compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.2.v20170220'
-    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.2.v20170220'
+    compile group: 'org.eclipse.jetty', name:
+            'jetty-servlet', version: '9.4.2.v20170220'
 
     compile 'org.glassfish.jersey.core:jersey-client:2.25.1'
     compile 'org.glassfish.jersey.core:jersey-common:2.25.1'
@@ -33,6 +40,21 @@ dependencies {
 
     // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.1'
+
+    compile group: 'com.clarkparsia.pellet', name: 'pellet-core', version: '2.3.2-SNAPSHOT'
+
+    compile group: 'com.clarkparsia.pellet', name: 'pellet-owlapiv3', version: '2.3.2-SNAPSHOT'
+
+    compile group: 'org.okkam.owl', name: 'jaob-core', version: '1.1-SNAPSHOT', changing: true
+
+    compile group: 'org.okkam.owl', name: 'jaob-maven-plugin', version: '1.1-SNAPSHOT', changing: true
+
+    // https://mvnrepository.com/artifact/de.derivo/sparqldl-api
+    //compile group: 'de.derivo', name: 'sparqldl-api', version: '1.0.0'
+
+    compile group: 'edu.stanford.protege', name: 'de-derivo-sparqldlapi', version: '2.0.1-SNAPSHOT'
+
+
 
     //    compile group: 'net.sourceforge.owlapi', name: 'owlapi-distribution', version: '3.5.6'
 //
