--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.1'
 
     //compile group: 'net.sourceforge.owlapi', name: 'owlapi-distribution', version: '4.2.8'
+    //compile group: 'net.sourceforge.owlapi', name: 'owlapi-distribution', version: '3.5.6'
 
     compile group: 'com.clarkparsia.pellet', name: 'pellet-core', version: '2.4.0-SNAPSHOT'
     compile group: 'com.clarkparsia.pellet', name: 'pellet-owlapi', version: '2.4.0-SNAPSHOT'
