--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,3 +95,7 @@ jar {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
+
+shadowJar {
+    mergeServiceFiles()
+}
