--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,16 @@
 
 build/
 
-app/.idea/
-app/build/
-
 ## File-based project format:
 *.iws
+
+previna-avc.log
+
+catalog-v001.xml
+
+classes/
+
+ontology/catalog-v001.xml
 
 ## Plugin-specific files:
 
@@ -36,9 +41,8 @@ fabric.properties
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-# *.iml
+*.iml
 # modules.xml
-# .idea/misc.xml
 # *.ipr
 
 ### Maven ###
