--- a/build.gradle
+++ b/build.gradle
@@ -34,20 +34,22 @@ configurations.all {
     resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
+def springBootVersion = '1.5.8.RELEASE'
+
 dependencies {
-    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.2.v20170220'
-    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.2.v20170220'
-    compile 'org.glassfish.jersey.core:jersey-client:2.25.1'
-    compile 'org.glassfish.jersey.core:jersey-common:2.25.1'
-    compile 'org.glassfish.jersey.core:jersey-server:2.25.1'
-    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.25.1'
-    compile 'org.glassfish.jersey.containers:jersey-container-jetty-servlet:2.25.1'
-    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.25.1'
+    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
+        exclude module: "spring-boot-starter-tomcat:${springBootVersion}"
+        exclude module: "spring-boot-starter-logging"
+    }
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jersey', version: "${springBootVersion}"
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-jetty', version: "${springBootVersion}"
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.24'
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.1'
-    compile group: 'com.hp.hpl.jena', name: 'arq', version: '2.8.8'
+    compile("com.hp.hpl.jena:arq:2.8.8") {
+        exclude module: "slf4j-log4j12"
+    }
+    compile group: 'org.jgrapht', name: 'jgrapht-jdk1.5', version: '0.7.3'
     compile group: 'net.sourceforge.owlapi', name: 'owlapi-distribution', version: '3.5.6'
+    compile files('libs/aterm-java-1.6.jar')
     compile files('libs/code-generation-2.0.1-SNAPSHOT.jar')
     compile files('libs/jaob-core-1.1-SNAPSHOT.jar')
     compile files('libs/jaob-maven-plugin-1.1-SNAPSHOT.jar')
