--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,15 @@ group 'com.lucas.previna-avc'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'idea'
-apply plugin: 'war'
 apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'distribution'
+apply plugin: 'application'
+
+mainClassName = 'com.previnaavc.Application'
+
+def springBootVersion = '1.5.8.RELEASE'
 
 buildscript {
     repositories {
@@ -12,12 +18,13 @@ buildscript {
     }
     dependencies {
         classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.8.RELEASE")
     }
 }
 
 jar {
     manifest {
-        attributes 'Main-Class': 'server.JettyServerJava'
+        attributes 'Main-Class': 'com.previnaavc.Application'
     }
     from {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
@@ -33,8 +40,6 @@ configurations.all {
     // Check for updates every build
     resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
-
-def springBootVersion = '1.5.8.RELEASE'
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}") {
