--- a/build.gradle
+++ b/build.gradle
@@ -53,18 +53,26 @@ dependencies {
     }
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-jetty', version: "${springBootVersion}"
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
-    compile("com.hp.hpl.jena:arq:2.8.8") {
-        exclude module: "slf4j-log4j12"
-    }
+    //compile("com.hp.hpl.jena:arq:2.8.8") {
+    //    exclude module: "slf4j-log4j12"
+    //}
     compile group: 'org.jgrapht', name: 'jgrapht-jdk1.5', version: '0.7.3'
-    compile group: 'net.sourceforge.owlapi', name: 'owlapi-distribution', version: '3.5.6'
+    //compile group: 'net.sourceforge.owlapi', name: 'owlapi-distribution', version: '3.5.6'
+    compile group: 'net.sourceforge.owlapi', name: 'owlapi-distribution', version: '5.1.3'
     compile files('libs/aterm-java-1.6.jar')
     compile files('libs/code-generation-2.0.1-SNAPSHOT.jar')
     compile files('libs/jaob-core-1.1-SNAPSHOT.jar')
     compile files('libs/jaob-maven-plugin-1.1-SNAPSHOT.jar')
-    compile files('libs/pellet-core-2.4.0-SNAPSHOT.jar')
-    compile files('libs/pellet-owlapi-2.4.0-SNAPSHOT.jar')
-    compile files('libs/pellet-jena-2.4.0-SNAPSHOT.jar')
+    //compile files('libs/pellet-core-2.4.0-SNAPSHOT.jar')
+    //compile files('libs/pellet-owlapi-2.4.0-SNAPSHOT.jar')
+    //compile files('libs/pellet-jena-2.4.0-SNAPSHOT.jar')
+
+    compile 'com.github.galigator.openllet:openllet-owlapi:2.6.3'
+    compile 'com.github.galigator.openllet:openllet-jena:2.6.3'
+
+    //compile files('libs/pellet-core-ignazio1977-2.4.0-ignazio1977.jar')
+    //compile files('libs/pellet-owlapi-ignazio1977-2.4.0-ignazio1977.jar')
+    //compile files('libs/pellet-jena-ignazio1977-2.4.0-ignazio1977.jar')
 }
 
 shadowJar {
